@@ -1,3 +1,8 @@
+2008-02-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/z80/mul.s: Rewrote __muluchar_rrx_s, to improve 8-bit mult.,
+          implements #1896290.
+
 2008-02-22 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCast.c (createIvalStruct): fixed bug 1466761
